[package]
name = "justhash"
version = "1.0.0"
edition = "2021"
description = "Simple cli for hashing with sha256"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
sha256 = "1.1.3"
